# Bandist

./: README.md  flutter_native_splash.yaml  pubspec.yaml  requirements.txt  test.json
android/app/: build.gradle
backend/: db.sqlite3
backend/backend/: settings.py  urls.py
backend/backendcore/: .gitignore  Procfile  apps.py  db.sqlite3  manage.py  pyproject.toml  urls.py  views.py
backend/backendcore/backendcore/: .env  asgi.py  settings.py  urls.py  wsgi.py
backend/backendcore/backendcore/settings/: base.py  dev.py  prod.py
backend/bandist/: .cache  db.sqlite3  manage.py  requirements.txt
backend/polls/: views.py
backend/spotify/: .env  credentials.py  models.py  urls.py  util.py  views.py
env/Scripts/: activate  activate.bat
ios/Runner/: AppDelegate.swift  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: env.sample.dart  main.dart
lib/constants/: ColorConstants.dart  SizeConfig.dart  api_constants.dart
lib/pages/: BottomSheetWidget.dart  ConcertsPage.dart  EditProfile.dart  FlightsPage.dart  HomePage.dart  LikedPage.dart  LoginPage.dart  MainPage.dart  MapsPage.dart  PrivacyPage.dart  SettingsPage.dart  artist.dart  env.sample.dart
lib/provider/: fav_provider.dart
lib/services/: api_service.dart
lib/widgets/: BodyHomePage.dart  BottomBar.dart  FloatingButton.dart  bottomNavigationBar.dart  floating_button.dart  (+1 more)
linux/: CMakeLists.txt  my_application.cc
test/: widget_test.dart
text files/: issues.txt  jnck.txt  tech start todo 19 jan.txt  todo for our app.txt
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+71 files in other folders)
