[tool.poetry]
name = "backendcore"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "4.1.3"
asgiref = "3.5.2"
certifi = "2022.9.24"
cffi = "1.15.1"
charset-normalizer = "2.1.1"
cryptography = "38.0.3"
defusedxml = "0.7.1"
deprecated = "1.2.13"
django-braces = "1.15.0"
django-cors-headers = "3.13.0"
django-environ = "0.9.0"
django-oauth-toolkit = "2.2.0"
django-rest-framework = "0.1.0"
django-rest-framework-social-oauth2 = "1.1.0"
djangorestframework = "3.14.0"
djangorestframework-simplejwt = "5.2.2"
idna = "3.4"
jwcrypto = "1.4.2"
oauthlib = "3.2.2"
pycparser = "2.21"
pyjwt = "2.6.0"
python3-openid = "3.2.0"
pytz = "2022.6"
requests = "2.28.1"
requests-oauthlib = "1.3.1"
social-auth-app-django = "5.0.0"
social-auth-core = "4.3.0"
sqlparse = "0.4.3"
tzdata = "2022.6"
urllib3 = "1.26.12"
wrapt = "1.14.1"
django-on-heroku = "^1.1.2"
gunicorn = "^20.1.0"
python-dotenv = "^0.21.0"
python-decouple = "^3.6"
django-extensions = "^3.2.1"
environ = "^1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
